--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-    <title>Fantasy Football</title>
+    <title>Delta Treats</title>
   </head>
   <body>
     <div id="root"></div>
